Remove legacy Base 64 encode